# personal-finance-manager

./: .gitignore  fakedb.json
client/: README.md  package-lock.json  package.json  tsconfig.node.json
client/src/: App.vue  main.ts
client/src/components/: AnalyticsChart.vue  AnalyticsItem.vue  AnalyticsSummary.vue  PeriodNavigator.vue  ToolTip.vue  TransactionDateGroup.vue  TransactionItem.vue  TransactionList.vue
client/src/components/icons/: ArrowLeft.vue  ArrowRight.vue  ChartIcon.vue
client/src/composables/: useTransactionManager.ts
client/src/plugins/: serviceProvider.ts
client/src/router/: index.ts
client/src/services/: DemoTransactionService.ts  LiveTransactionService.ts  transactionService.ts  transactionUrlService.ts  urlService.ts
client/src/stores/: accountStore.ts  transactionStore.ts
client/src/types/: Analytics.ts  Transaction.ts  TransactionServiceInterface.ts
client/src/views/: AboutView.vue  HomeView.vue
server/: .gitignore  README.md  models.py  pyproject.toml  services.py
server/src/: api.py  base_categories.py  database.py  dependencies.py  dtos.py  main.py  models.py  tools.py
server/src/services/: categorization.py  finances.py
server/tests/: fixtures.py  test_api.py  test_categorization_service.py  test_finance_service.py  test_tools.py
server/tests/assets/: test-transactions.csv
